--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,4 +36,32 @@
         android:layout_height="wrap_content"
         android:text="Send on Channel 2"
         android:onClick="sendOnChannel2"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Send using messaging style"
+        android:onClick="sendUsingMessagingStyle"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Send notification progress bar"
+        android:onClick="sendNotificationProgress"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Send notification groups"
+        android:onClick="sendNotificationGroups"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="deleteNotification"
+        android:text="Delete Notification"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="customNotification"
+        android:text="Custom Notification"/>
+
 </LinearLayout>
